Update titles to Ultimate Tic Tac Toe

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "super-tic-tac-toe-react",
+  "name": "ultimate-tic-tac-toe-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
